# mon

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
src/: cli.rs  display.rs  error.rs  main.rs  pokemon.rs  utility.rs
