[package]
name = "mon"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "*"
colored = "*"
rand = "*"
futures = "*"
titlecase = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
textwrap = "*"
thiserror = "*"
once_cell = "*"